// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhoneChallengeTransformer Tests should create SMS challenge UI elements when phone number and nickname are available 1`] = `
{
  "data": {},
  "dataSchema": {
    "credentials.passcode": {
      "validate": [Function],
    },
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.phone.verify.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "noMargin": true,
        "options": {
          "content": "oie.phone.verify.sms.codeSentText.with.phone.with.nickname",
        },
        "type": "Description",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.phone.carrier.charges",
        },
        "type": "Description",
      },
      {
        "label": "mfa.challenge.verify",
        "options": {
          "step": "challenge-authenticator",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`PhoneChallengeTransformer Tests should create SMS challenge UI elements when phone number not available 1`] = `
{
  "data": {},
  "dataSchema": {
    "credentials.passcode": {
      "validate": [Function],
    },
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.phone.verify.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "noMargin": true,
        "options": {
          "content": "oie.phone.verify.sms.codeSentText.without.phone",
        },
        "type": "Description",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.phone.carrier.charges",
        },
        "type": "Description",
      },
      {
        "label": "mfa.challenge.verify",
        "options": {
          "step": "challenge-authenticator",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`PhoneChallengeTransformer Tests should create SMS challenge UI elements when resend code is NOT available 1`] = `
{
  "data": {},
  "dataSchema": {
    "credentials.passcode": {
      "validate": [Function],
    },
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.phone.verify.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "noMargin": true,
        "options": {
          "content": "oie.phone.verify.sms.codeSentText.with.phone.without.nickname",
        },
        "type": "Description",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.phone.carrier.charges",
        },
        "type": "Description",
      },
      {
        "label": "mfa.challenge.verify",
        "options": {
          "step": "challenge-authenticator",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`PhoneChallengeTransformer Tests should create SMS challenge UI elements when resend code is available 1`] = `
{
  "data": {},
  "dataSchema": {
    "credentials.passcode": {
      "validate": [Function],
    },
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.phone.verify.title",
        },
        "type": "Title",
      },
      {
        "options": {
          "actionParams": {
            "resend": true,
          },
          "buttonText": "oie.phone.verify.sms.resendLinkText",
          "content": "oie.phone.verify.sms.resendText",
          "isActionStep": true,
          "step": "resend",
        },
        "type": "Reminder",
      },
      {
        "contentType": "subtitle",
        "noMargin": true,
        "options": {
          "content": "oie.phone.verify.sms.codeSentText.with.phone.without.nickname",
        },
        "type": "Description",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.phone.carrier.charges",
        },
        "type": "Description",
      },
      {
        "label": "mfa.challenge.verify",
        "options": {
          "step": "challenge-authenticator",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`PhoneChallengeTransformer Tests should create voice challenge UI elements when phoneNumber and nickname are available 1`] = `
{
  "data": {},
  "dataSchema": {
    "credentials.passcode": {
      "validate": [Function],
    },
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.phone.verify.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "noMargin": true,
        "options": {
          "content": "oie.phone.verify.mfa.calling.with.phone.with.nickname",
        },
        "type": "Description",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.phone.carrier.charges",
        },
        "type": "Description",
      },
      {
        "label": "mfa.challenge.verify",
        "options": {
          "step": "challenge-authenticator",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`PhoneChallengeTransformer Tests should create voice challenge UI elements when phoneNumber is available 1`] = `
{
  "data": {},
  "dataSchema": {
    "credentials.passcode": {
      "validate": [Function],
    },
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.phone.verify.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "noMargin": true,
        "options": {
          "content": "oie.phone.verify.mfa.calling.with.phone.without.nickname",
        },
        "type": "Description",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.phone.carrier.charges",
        },
        "type": "Description",
      },
      {
        "label": "mfa.challenge.verify",
        "options": {
          "step": "challenge-authenticator",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`PhoneChallengeTransformer Tests should create voice challenge UI elements when phoneNumber not available 1`] = `
{
  "data": {},
  "dataSchema": {
    "credentials.passcode": {
      "validate": [Function],
    },
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.phone.verify.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "noMargin": true,
        "options": {
          "content": "oie.phone.verify.mfa.calling.without.phone",
        },
        "type": "Description",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.phone.carrier.charges",
        },
        "type": "Description",
      },
      {
        "label": "mfa.challenge.verify",
        "options": {
          "step": "challenge-authenticator",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
